reworked reservation list view and css structure

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,8 +42,27 @@ header h1 {
   margin-left: 40px;
 }
 
+section h1 {
+  margin-top: 5px;
+}
+
 #varauslista-container {
   grid-area: lista;
+  display: flex;
+  flex-direction: column;
+}
+
+#varauslista {
+  height: 70%;
+  overflow-y: auto;
+  box-shadow:         inset 0px -10px 20px #33333355;
+}
+
+#uusivaraus-nappi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 #varauskalenteri-container {
@@ -98,12 +117,8 @@ header h1 {
 
 #uusi-varaus-btn {
   width: 250px;
-  margin: 40px 10%;
   font-size: 1.2rem;
   font-weight: bold;
-
-  position: absolute;
-  bottom: 0;
 }
 
 
