--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.0rem;
+  font-size: 1.0rem;
 }
 
 h3 {
@@ -50,12 +50,14 @@ section h1 {
   grid-area: lista;
   display: flex;
   flex-direction: column;
+  width: 40vw;
 }
 
 #varauslista {
   height: 70%;
   overflow-y: auto;
   box-shadow:         inset 0px -10px 20px #33333355;
+  border-bottom: 1px solid #333333CC;
 }
 
 #uusivaraus-nappi {
@@ -84,6 +86,7 @@ section h1 {
 
 #varauskalenteri {
   max-height: 400px;
+  width: 50%;
 }
 
 #uusi-varaus-container {
@@ -163,6 +166,17 @@ section h1 {
 .light-bg {
   background-color: #545c6f;
   color: #eee;
+}
+
+.lighter-bg {
+
+}
+
+
+.darker-bg {
+  background-color: #0b3d5b;
+  color: #eee;
+  border: 2px solid #eeeeee77;
 }
 
 .primary-bg {
