--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -86,6 +86,18 @@ section h1 {
   padding-left: 20px;
 }
 
+#varauslista li h3 {
+  margin-bottom: 5px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#varauslista li p {
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
 #varauskalenteri {
   max-height: 400px;
   width: 50%;
@@ -188,4 +200,11 @@ section h1 {
 
 .bottom-spacer {
   margin-bottom: 25px;
+}
+
+.info-box {
+  border: 1px dashed #333333CC;
+  border-radius: 10px;
+  padding: 40px;
+  text-align: center;
 }
