--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -128,7 +128,13 @@ section h1 {
 }
 
 #uusi-varaus-form input, textarea {
-  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  border: 2px solid #333333AA;
+  margin: 10px 0px;
+  background-color: #dee;
+  padding: 10px;
+  font-size: 1.3rem;
 }
 
 
