removed box shadow and border-bottom from varauslista in mobile / tablet view

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -252,7 +252,9 @@ section h1 {
 
   #varauslista {
     height: auto;
-    min-height: 70%;
+    min-height: 200px;
+    box-shadow: none;
+    border-bottom: none;
   }
 
 }
